--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="profile-pic"src="https://media-exp1.licdn.com/dms/image/C5603AQGg1yeJd1jZ-g/profile-displayphoto-shrink_400_400/0/1633182507421?e=1649289600&v=beta&t=BT7RESqhyXieFJDwYm-iBormHJC6GFlBL4jsYTOMeK0" alt="profile-picture">
+          <img class="profile-pic"src="img/andrea.png">
           <h2>Hello.</h2>
           <p class="intro">I'm Andrea, I'm a Junior Full Stack Web developer.</p>
           <p class="intro">This is a simple CSS and HTML site, in the following link I'll share with you the projects that i have created during my journey.</p>
