--- a/index.html
+++ b/index.html
@@ -30,16 +30,20 @@
         <h2>My Skills.</h2>
         <div class="skills">
           <div class="skill-row">
-            <img class="code-img" src="img/computer.png" alt="skill-picture">
-            <h3>Front-end</h3>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Bootstrap</li>
-              <li>Javascript</li>
-              <li>React</li>
-              <li>jQuery</li>
-            </ul>
+            <div>
+                <img class="code-img" src="img/computer.png" alt="skill-picture">
+                <h3>Front-end</h3>
+            </div>
+            <div style="width: 50%; padding-left: 50%;">
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Bootstrap</li>
+                <li>Javascript</li>
+                <li>React</li>
+                <li>jQuery</li>
+              </ul>
+            </div>
           </div>
           <div class="skill-row">
             <img class="chill-img" src="img/chillies.png" alt="skill-picture">
